--- a/tasks.json
+++ b/tasks.json
@@ -2,7 +2,7 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "Compile and Run C++",
+            "label": "Compile & Run",
             "type": "shell",
             "command": "g++",
             "args": [
