--- a/tasks.json
+++ b/tasks.json
@@ -2,11 +2,11 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "Compile & Run",
+            "label": "Compile & Run C++ with I/O Redirection",
             "type": "shell",
             "command": "g++",
             "args": [
-                "-std=c++20","-o", "c++", "c++.cpp","&&","./c++"
+                "-std=c++20", "-o", "c++", "c++.cpp", "&&", "./c++", "<", "input.txt", ">", "output.txt"
             ],
             "group": {
                 "kind": "build",
@@ -16,8 +16,7 @@
             "presentation": {
                 "reveal": "silent",
                 "panel": "shared"
-            },
-            "dependsOn": [],
-        },
+            }
+        }
     ]
 }
