--- a/tasks.json
+++ b/tasks.json
@@ -2,7 +2,7 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "Compile & Run C++ with I/O Redirection",
+            "label": "Compile & Run C++ --> I/O",
             "type": "shell",
             "command": "g++",
             "args": [
